# my-sequel

./: .gitignore  README.md
files-sql/: README.md  justfile  pyproject.toml
files-sql/src/: sql.py
frm-go/: go.mod  go.sum  read.go
ibd-go/: go.sum  read.go
ibd-py/: README.md  justfile  pyproject.toml  schema_files.yaml
ibd-py/src/: read.py
nfo-py/: README.md  justfile
nfo-py/src/: nfo.py
