[project]
name = "ibd-py"
version = "0.1.0"
description = "Use a CSV of data from a parsed files.ibd file to join the data back into the Kodi database."
authors = [
    {name = "Jeffrey McGovern",email = "jeff@jdmcg.org"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[dependency-groups]
dev = [
    "rust-just (>=1.46.0,<2.0.0)",
    "uv (>=0.9.22,<0.10.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pyclean (>=3.4.0,<4.0.0)",
]

[tool.poetry]
package-mode=false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=120
include = 'src\/.*.py$'

[tool.isort]
line_length=120
src_paths = ["src"]
force_sort_within_sections = true
force_alphabetical_sort_within_sections = true
use_parentheses = true
ensure_newline_before_comments=true
extend_skip = "generated"
force_grid_wrap = 0

[tool.pydocstyle]
inherit=false
match_dir="src"
convention="google"
add_select=[
    "D401",
]
add_ignore=[
    "D301",
    "D412",
]

